day-03/authorization-policies/enabled-mtls-to-default-namespace.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "anabled-mtls"
  namespace: "default"
spec:
  mtls:
    mode: STRICT
