day-03/authorization-policies/auth-temporary-disable-ratings.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "deny-policy-to-ratings"
  namespace: "default"
spec:
  selector:
    matchLabels:
      app: reviews
  action: DENY
  rules: 
  - {}
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "deny-policy-to-details"
  namespace: "default"
spec:
  selector:
    matchLabels:
      app: details
  action: DENY
  rules: 
  - {}
